# radiance

./: .gitignore  .gitmodules  .tags  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  TODO.md  a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  (+630 more)
.travis/: after_success.sh  before_install.sh  before_script.sh  install.sh
audio/: analyze.c  analyze.cpp  analyze.h  audio.c  audio.cpp  audio.h  input_pa.c  input_pa.cpp  input_pa.h
beat-off/: Makefile.in  configure  configure.ac  scale_layout.py
beat-off/conf/: layout_1920.ini  state.ini
beat-off/conf/state/: state_0.ini
beat-off/liblux/: lux_cmds.h
beat-off/liblux/linux/: crc.c  crc.h  lux.h
beat-off/src/audio/: input_pa.c
beat-off/src/core/: config_color.h  config_gen_h.def  parameter.h  slot.c  slot.h
beat-off/src/filters/: filter.c  filter.h  vamp.cpp  vamp.h
beat-off/src/midi/: config.c  midi.c  midi.h
beat-off/src/output/: flux.c  flux.h  output.c  slice.h
beat-off/src/patterns/: bubble.c  full.c  pattern.c  pattern.h  perlin.c  sparkle.c  static.h  strobe.c  swipe.c  wave.c
beat-off/src/signals/: signal.c
beat-off/src/state/: state.c
beat-off/src/timebase/: timebase.c  timebase.h
beat-off/src/ui/: layout.def  layout.h  layout_constants.h  slider.c  text.c  ui.h  waveform.h
beat-off/src/util/: color.c  perlin.h  string.h
beat-off/src/waveform/: waveform.h
beat_toolkit/: Makefile  pyproject.toml
beat_toolkit/beat_toolkit/: __init__.py
benches/: beat_tracking_test.rs
cmake/: Doxygen.cmake  FindFFTW.cmake  FindRtMidi.cmake  FindSampleRate.cmake
conf/: layout.ini  layout_1388.ini  midi.ini
conf/state/: state_0.ini
core/: audio.c  audio.cpp  audio.h  config.c  config.def  config.h  config_color.h  config_gen_c.def  config_gen_h.def  config_macros.h  controllers.c  controllers.h  err.h  frame.c  frame.h  input.c  input.h  main.c  midi.c  output.c  parameter.c  parameter.h  pattern.c  pattern.h  serial.c  serial.h  signal.c  slice.c  slice.h  slot.c  slot.h  state.c  state.h  time.h  ui.c  ui.h
deck/: deck.c  deck.h  pattern.c  pattern.h
deploy/: Info.plist  Info.plist.in  debian.sh  linux.sh  mac.sh  png2icns.sh  radiance.desktop
deploy/debian/: control  copyright  install  rules
dynamic/: object.c  object.h
filters/: audio.c  audio.cpp  audio.h  filter.c  filter.h  vamp.cpp  vamp.h
hits/: hit.c  hit.h
liblux/: crc.h  lux.c  lux.h  lux_cmds.h  main.c
liblux/linux/: lux.c
live/: Makefile  pattern.c
midi/: config.c  config.h  controllers.c  controllers.h  layout.c  layout.h  midi.c  midi.cpp  midi.h  midi_map.def
model/: frame.c  frame.h
netlify/: 1.todomvc.js  todomvc.js  todomvc.wasm
old_python/: bespeckle.py  devices.py  effect.py  graphics.py  recorder.py  visualizer.py
output/: config.c  config.def  config.h  flux.c  lux.c  lux.h  output.c  output.cpp  output.h  serial.c  serial.h  slice.c  slice.cpp  slice.h
pattern/: crossfader.c  crossfader.cpp  crossfader.h  deck.c  deck.cpp  deck.h  pattern.c  pattern.cpp  pattern.h
patterns/: bubble.c  fade.c  full.c  mstrobe.c  pattern.c  pattern.h  rainbow.c  sparkle.c  static.h  strobe.c  swipe.c  template.c  wave.c
python/: .gitignore  README.rst  output_example.py  setup.py
python/radiance/: __init__.py  light_output_node.py
resources/: blit.glsl  config.ini  crossfader.glsl  decks.ini  default.v.glsl  effect_header.glsl  geometry.glsl  geometry_framed.glsl  ggeometry.glsl  gvertex.glsl  header.glsl  header_ui.glsl  lib.glsl  lib_ui.glsl  midi.ini  multiblit.glsl  output.ini  output_32.ini  params.ini  render.c.glsl  resources.qrc  sdf.f.glsl  sdf.v.glsl  strip.f.glsl  strip.glsl  strip.v.glsl  text.f.glsl  text.v.glsl  ui_crossfader.glsl  ui_main.glsl  ui_pat.glsl  ui_spectrum.glsl  ui_text.glsl  ui_waveform.glsl  vector_lib.f.glsl  vertex.glsl  vertex_framed.glsl
resources/config/: gui_default.json
resources/effects/: allwhite.0.glsl  allwhite.glsl  black.0.glsl  black.glsl  blowout.glsl  bounce.0.glsl  bounce.glsl  bstrobe.0.glsl  bstrobe.glsl  bwave.0.glsl  bwave.glsl  cga1.glsl  chansep.0.glsl  circle.glsl  (+193 more)
signals/: signal.c  signal.h
src/: Audio.cpp  Audio.h  BaseVideoNodeTile.cpp  BaseVideoNodeTile.h  Chain.cpp  Chain.h  ConsoleOutputNode.cpp  ConsoleOutputNode.h  Context.cpp  Context.h  Control.cpp  Control.h  Controls.cpp  Controls.h  CrossFader.cpp  CrossFader.h  CrossFaderUI.cpp  CrossFaderUI.h  Effect.cpp  Effect.h  EffectNode.cpp  EffectNode.cpp.broken  EffectNode.h  EffectNode.h.broken  EffectUI.cpp  EffectUI.h  FFmpegOutputNode.cpp  FFmpegOutputNode.cpp.broken  FFmpegOutputNode.h  FfmpegOutputNode.cpp  FfmpegOutputNode.h  FramebufferObject.cpp  FramebufferObject.h  FramebufferVideoNodeRender.cpp  FramebufferVideoNodeRender.h  GlslDocument.cpp  GlslDocument.h  GlslHighlighter.cpp  GlslHighlighter.h  GraphicalDisplay.cpp  (+139 more)
state/: state.c  state.def
static/: effect_list.txt  index.html  index.js  style.css  ui-prototype.html
support/: test_server.py
text/: DejaVuSans.h  ProggyTinySZ.h  embedded.cpp  embedded.hpp  font.hpp  ftgl.cpp  ftgl.hpp  stb.c
time/: timebase.c  timebase.cpp  timebase.h
timebase/: timebase.c  timebase.h
ui/: drawer.ts  flickable.ts  fps.ts  graph.c  graph.h  graph.ts  graph_data.ts  index.ts  layout.c  layout.def  layout.h  library.ts  render.c  render.cpp  render.h  slider.c  slider.h  text.c  text.h  tiles.ts  typing.d.ts  ui.c  ui.cpp  ui.h  waveform.c
util/: color.c  color.h  colormaps.c  common.h  config.c  config.def  config.h  config_gen_c.def  config_gen_h.def  config_macros.h  err.h  font.hpp  ftgl.cpp  ftgl.hpp  glsl.c  glsl.cpp  glsl.h  ini.c  ini.h  math.h  opengl_debug.hpp  params.def  siggen.c  siggen.h  signal.c  signal.h  string.c  string.h
waveform/: waveform.c  waveform.h
(+277 files in other folders)
