[package]
name = "radiance"
description = "Video art software designed for live performance"
version = "0.1.0"
authors = ["Zach Banks <zjbanks@gmail.com>", "Eric Van Albert <eric@van.al>"]
homepage = "https://radiance.video"
repository = "https://github.com/zbanks/radiance"
edition = "2021"
license-file = "LICENSE"
default-run = "radiance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "radiance"
path = "src/lib/mod.rs"

[[bin]]
name = "radiance"
path = "src/bin/main.rs"

[[bin]]
name = "beat_tracking_test"
path = "src/bin/beat_tracking_test.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
rand = "0.8"
bytemuck = { version = "1.10", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
base64 = "0.13"
nalgebra = "0.31.0"
rustfft = "6.0"
itertools = "0.10"
cpal = "0.14"
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = "0.19"
derive_more = "0.99"
image = "0.24"

# There was a breaking change to `alsa` introduced in v0.6.1,
# temporarily pin it to v0.6.0 until this has been fixed, see:
# https://github.com/diwic/alsa-rs/issues/90
alsa = "=0.6.0"

# mpv / MovieNode dependencies
libmpv = { git = "https://github.com/ervanalb/libmpv-rs", rev = "69bb8aec97f8d251bfaf18560e6cd6a6dda5c6a3", features = ["render"]}
libmpv-sys = { git = "git+https://github.com/ervanalb/libmpv-rs", rev="69bb8aec97f8d251bfaf18560e6cd6a6dda5c6a3"}
glutin = "0.26.0" # Kept back: 0.30.0 introduces a big refactor and drops os-mesa support
glow = "0.12.1"
crossbeam = "0.8.2"

# For memory profiling (see also src/bin/main.rs)
#[dependencies.jemallocator]
#version = "0.3.2"
#features = ["profiling"]

[dev-dependencies]
wav = "1.0"

[profile.dev]
opt-level = 1

[patch.crates-io]
egui = { git = "https://github.com/ervanalb/egui", rev = "0253560d" }
egui-wgpu = { git = "https://github.com/ervanalb/egui", rev = "0253560d" }
egui-winit = { git = "https://github.com/ervanalb/egui", rev = "0253560d" }
