[tool.poetry]
name = "beat-toolkit"
version = "0.1.0"
description = "Beat tracking testing toolkit"
authors = ["Zach Banks <zjbanks@gmail.com>"]
packages = [{include = "beat_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
soundfile = "^0.11.0"
rubberband = {git = "https://github.com/zbanks/rubberband.git", rev = "v1.0.3"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
isort = "^5.10.1"
pytest = "^7.1.3"
Flake8-pyproject = "^1.1.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
module = [
    "rubberband",
    "soundfile",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ".git,.mypy_cache,.pytest_cache"
extend-ignore = "E203"
